--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/swagger": "^7.1.16",
     "@prisma/client": "5.6.0",
     "chalk": "4",
+    "class-validator": "^0.14.0",
     "dayjs": "^1.11.10",
     "redis": "^4.6.11",
     "reflect-metadata": "^0.1.13",
