--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/websockets": "^10.3.0",
     "@node-rs/bcrypt": "^1.7.3",
     "@prisma/client": "5.6.0",
+    "axios": "^1.6.5",
     "chalk": "4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
