--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.10",
     "ip2region": "^2.3.0",
+    "lodash": "^4.17.21",
     "nodemon": "^3.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
