--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.0",
+    "@nestjs/schedule": "^4.0.0",
     "@nestjs/swagger": "^7.1.16",
     "@nestjs/throttler": "^5.1.1",
     "@nestjs/websockets": "^10.3.0",
